--- a/myapp/src/app/app.component.html
+++ b/myapp/src/app/app.component.html
@@ -4,9 +4,9 @@
       <a class="navbar-brand" href="#">{{WebName}}</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
-      <li (click)="navClicked('about')"><a href="/about">About</a></li>
-      <li [class.active]="{'active':textBool}"><a href="#">Page 2</a></li>
+      <li ><a routerLink="/">Home</a></li>
+      <li ><a routerLink="/about">About</a></li>
+      <li><a>Page 2</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
