--- a/myapp/src/app/app.component.html
+++ b/myapp/src/app/app.component.html
@@ -6,7 +6,7 @@
     <ul class="nav navbar-nav">
       <li ><a routerLink="/">Home</a></li>
       <li ><a routerLink="/about">About</a></li>
-      <li><a>Page 2</a></li>
+      <li><a routerLink="/crud">CRUD practise</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
